# dumbemu

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/dumbemu/: context.py  emulator.py  types.py
src/dumbemu/arch/: __init__.py  args.py  base.py  regs.py  x64.py  x86.py
src/dumbemu/core/: __init__.py  context.py  emulator.py  exceptions.py
src/dumbemu/cpu/: args.py  base.py  regs.py  x64.py  x86.py
src/dumbemu/data/: strings.py  structs.py
src/dumbemu/debug/: tracer.py
src/dumbemu/formats/: __init__.py  base.py  elf.py  factory.py  pe.py  utils.py
src/dumbemu/mem/: alloc.py  hooks.py  mapping.py  memory.py  stack.py
src/dumbemu/stubs/: __init__.py  core.py  posix.py  win32.py
src/dumbemu/utils/: constants.py  logger.py
src/dumbemu/win/: iat.py  tebpeb.py
